# azure_app_exporter_rs

./: .gitignore  Cargo.toml  README.md  build.rs  settings_example.toml
scripts/: about.toml  check_everything.sh  crate_licenses.html  deny.toml  gen_crate_licenses.sh
src/: app_metrics.rs  global_state.rs  lib.rs  main.rs  middleware.rs
src/routes/: applications.rs  metrics.rs  mod.rs  settings.rs
src/settings/: app_settings.rs  args.rs  mod.rs  tls_parser.rs
src/tasks/: api_token_updater.rs  application_metrics_updater.rs  applications_updater.rs  mod.rs
src/types/: applications.rs  mod.rs
src/utils/: from_swagger_ui_header.rs  mod.rs
